client/src/pages/SingleBlogPage/SingleBlogPage.scss
.single-blog-page {
  margin-top: 4rem;
  background: #ffffff;
  margin-bottom: 4rem;

  .relative-spinner {
    svg {
      color: #333 !important;
      path {
        color: #333 !important;
      }
    }
  }

  .suggested-blog {
    h2 {
      font-weight: 700;
      font-family: "Montserrat", sans-serif;
      font-size: 2rem;
      text-align: center;
      margin: 2rem;
    }
  }

  .current-blog-image {
    img {
      width: 100%;
      margin-bottom: 2rem;
      border-radius: 2rem;
    }
  }

  .single-blog-content {
    box-shadow: 0 4px 6px -1px #eee, 0 2px 4px -1px #eee;
    padding: 2rem;
    border-radius: 2rem;
    h1 {
      font-size: 3rem;
      margin-bottom: 2rem;
      font-family: "Agrandir";
    }
    .author {
      margin: 3rem 0;
      margin-top: -2.5rem;

      .user-name {
        font-size: 1.4rem;
        font-weight: 400;
        color: #676767;
      }
    }

    .blog-description {
      margin-bottom: 2rem;

      br {
        display: none;
      }
      h1 {
        font-size: 3.75rem;
        margin: 2.3rem 0;
        text-align: left;
      }
      h2 {
        font-size: 2.75rem;
        margin: 2rem 0;
      }
      h3 {
        font-size: 2.75rem;
        margin: 1.7rem 0;
      }
      h4 {
        font-size: 2.75rem;
        margin: 1.4rem 0;
      }
      h5 {
        font-size: 2.75rem;
        margin: 1.1rem 0;
      }
      p {
        margin: 1.5rem 0;
        font-size: 1.6rem;
        font-weight: 300;
        font-family: "Montserrat", sans-serif;
      }

      h1,
      h2,
      h3,
      h4,
      h5 {
        font-family: "Montserrat", sans-serif;

        strong {
          font-family: "Roboto", sans-serif;
        }
      }
      ul {
        padding-left: 2rem;
        li {
          font-size: 1.5rem;
          font-weight: 300;
        }
      }
    }
  }
}

